Refactored Services and Tests